# python-time-series-handbook

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.html  README.md  _config.yml  _toc.yml  env.yml  environment.yml  genindex.html  index.html  intro.html  intro.md  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  deploy-book.yml
_downloads/1049b52ad0dc7bd2ea78bf0d67aa313a/: env.yml
_sources/: README.md  intro.md
_sources/notebooks/: introduction_to_time_series.ipynb
notebooks/00/: intro.html  intro.md  knowledge_test.html  knowledge_test.md  resources.html  resources.md
notebooks/01/: introduction_to_time_series.html  introduction_to_time_series.ipynb  introduction_to_time_series.md
notebooks/01_introduction_to_time_series/: introduction_to_time_series.html
notebooks/02/: stationarity.html  stationarity.ipynb  stationarity.md
notebooks/03/: smoothing.html  smoothing.ipynb
notebooks/04/: ar-ma.html  ar-ma.ipynb
notebooks/05/: arma_arima_sarima.html  arma_arima_sarima.ipynb
notebooks/06/: unit-root-hurst.html  unit-root-hurst.ipynb
notebooks/07/: kalman-filter.html  kalman-filter.ipynb
notebooks/08/: signal-transforms-filters.html  signal-transforms-filters.ipynb
notebooks/09/: prophet.html  prophet.ipynb
notebooks/10/: nn-reservoir-computing.html  nn-reservoir-computing.ipynb
notebooks/11/: nonlinear-ts.html
scripts/: sync_user_environment.py
tsa_course/: lecture1.py  lecture11.py  lecture2.py  lecture8.py
(+18 files in other folders)
